--- a/package.json
+++ b/package.json
@@ -21,12 +21,17 @@
     "inversify": "^6.0.1",
     "jsonwebtoken": "^9.0.1",
     "mongodb": "^5.7.0",
-    "reflect-metadata": "^0.1.13"
+    "otplib": "^12.0.1",
+    "qrcode": "^1.5.3",
+    "reflect-metadata": "^0.1.13",
+    "speakeasy": "^2.0.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^20.4.8",
+    "@types/qrcode": "^1.5.1",
+    "@types/speakeasy": "^2.0.7",
     "eslint": "^8.46.0",
     "eslint-plugin-import": "^2.28.0",
     "nodemon": "^3.0.1",
